iptables.conf
# Generated by iptables-save v1.4.21 on Mon Oct  5 16:40:20 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT

######################## Add rule permit ssh ########################
-A INPUT -s 10.61.18.189 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.0.18.18/32 -p tcp -m state --state NEW -m tcp --dport 1521

################ Permit SSH ###################################


#####################Log and Reject#################
-A INPUT -j LOG --log-level 4 --log-prefix "IPTABLES DROP"
-A INPUT -j REJECT --reject-with icmp-host-prohibited

###########################FORWARD RULES#######################################
#
#####################Log and Reject#################
-A FORWARD -j LOG --log-level 4 --log-prefix "IPTABLES DROP"
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
#
###############OUTPUT Rules###############################
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

################Log and Reject OUTPUT#####################
-A OUTPUT -j LOG --log-level 4 --log-prefix "IPTABLES DROP"
-A OUTPUT -j REJECT --reject-with icmp-host-prohibited



COMMIT
# Completed on Mon Oct  5 16:40:20 2020
